import("//build/config/common.gni")

group("ui") {
    deps = [
        "sdk:sdk",
        "svg:uisvg",
    ]
}

######################################

group("unittest") {
    deps = [
        "sdk:sdk_test"
    ]
}


######################################

group("sample") {
    deps = [
        "samples"
    ]
}
