shared_library("net") {
  output_dir = "$root_out_dir/bin"

  defines = [
    "NET_IMPLEMENTATION", 
    # "COMPONENT_BUILD"
  ]
  sources = [
    "base/address_family.h",
    "base/address_family.cpp",
    "base/address_list.h",
    "base/address_list.cpp",
    "base/io_buffer.h",
    "base/io_buffer.cpp",
    "base/ip_address.h",
    "base/ip_address.cpp",
    "base/ip_address_util.cpp",
    "base/ip_endpoint.h",
    "base/ip_endpoint.cpp",
    "base/net_errors.h",
    "base/net_errors_win.cpp",
  ]

  sources += [
    "socket/next_proto.h",
    "socket/next_proto.cpp",
    "socket/socket.h",
    "socket/socket.cpp",
    "socket/stream_socket.h",
    "socket/stream_socket.cpp",
    "socket/tcp_client_socket.h",
    "socket/tcp_client_socket.cpp",

    "socket/tcp_socket_win.h",
    "socket/tcp_socket_win.cpp",
  ]

  sources += [
    "url_request/url_request.h",
    "url_request/url_request.cpp"
  ]

  sources += [
    "../url/url_canon_stdstring.h",
    "../url/url_canon_stdstring.cpp",
    "../url/url_canon.h",
    "../url/url_canon.cpp",
    "../url/url_canon_ip.h",
    "../url/url_canon_ip.cpp",
  ]
  
   sources += [
    "../services/network/cors/cors_url_loader.h",
    "../services/network/cors/cors_url_loader.cpp",
    "../services/network/url_loader.h",
    "../services/network/url_loader.cpp",
    "../services/network/url_loader_factory.h",
    "../services/network/url_loader_factory.cpp",
  ]

  include_dirs = [
        "//browser/",
        "$target_gen_dir/",
  ]

  # 单元测试
  if (is_debug) { 
    defines += ["NET_UNITTEST"]
    sources += [
      "test/test_entry.cpp",
    ]
  }
}

if (is_debug) {
executable("net_unittest") {
  output_dir = "$root_out_dir/bin"
  deps = [
    ":net"
  ]

  cflags = []
  if (is_debug || (is_mac||is_linux)) {
    cflags = ["-g"]
  }
  include_dirs = [
    "//browser/",
  ]
  sources = [
    "test/test_main.cpp"
  ]
}
group("net_test") {
  deps = [
    ":net_unittest"
  ]
}

}