shared_library("net") {
  output_dir = "$root_out_dir/bin"

  defines = [
    "NET_IMPLEMENTATION", 
    # "COMPONENT_BUILD"
  ]
  sources = [
    "../base/strings/string_util.h",
    "../base/strings/string_util.cpp",
    "../base/strings/string_util_internal.h",
    "../base/strings/string_util_constants.cpp",
  ]
  sources += [
    "base/address_family.h",
    "base/address_family.cpp",
    "base/address_list.h",
    "base/address_list.cpp",
    "base/io_buffer.h",
    "base/io_buffer.cpp",
    "base/ip_address.h",
    "base/ip_address.cpp",
    "base/ip_address_util.cpp",
    "base/ip_endpoint.h",
    "base/ip_endpoint.cpp",
    "base/net_errors.h",
  ]
  if (is_win) {
    sources += [
      "base/net_errors_win.cpp",
    ]
  }

  sources += [
    "socket/next_proto.h",
    "socket/next_proto.cpp",
    "socket/socket.h",
    "socket/socket.cpp",
    "socket/stream_socket.h",
    "socket/stream_socket.cpp",
    "socket/tcp_client_socket.h",
    "socket/tcp_client_socket.cpp",
    "socket/transport_client_socket.h",
    "socket/transport_client_socket.cpp",
    "http/http_request_header.cpp",
    "http/http_cache.h",
    "http/http_cache.cpp",
  ]
  if (is_win) {
    sources += [
      "socket/tcp_socket_win.h",
      "socket/tcp_socket_win.cpp",
    ]
  } else if (is_mac || is_linux) {
    sources += [
      "socket/tcp_socket_posix.h",
      "socket/tcp_socket_posix.cpp",
    ]
  }

  sources += [
    "url_request/url_request.h",
    "url_request/url_request.cpp",
    "url_request/url_request_context.h",
    "url_request/url_request_context.cpp",
    "url_request/url_request_job.h",
    "url_request/url_request_job.cpp",
    "url_request/url_request_job_factory.h",
    "url_request/url_request_job_factory.cpp",
    "url_request/url_request_http_job.h",
    "url_request/url_request_http_job.cpp",
  ]

  sources += [
    "../url/gurl.h",
    "../url/gurl.cpp",
    # "../url/url_canon_stdstring.h",
    # "../url/url_canon_stdstring.cpp",
    # "../url/url_canon.h",
    # "../url/url_canon.cpp",
    # "../url/url_canon_ip.h",
    # "../url/url_canon_ip.cpp",
    # "../url/url_util.h",
    # "../url/url_util.cpp",
    # "../url/url_canon_stdurl.cc",
    # "../url/url_canon_etc.cc",
    # "../url/url_canon_host.cc",
    # "../url/url_canon_path.cc",
    # "../url/url_canon_query.cpp",
    # "../url/url_canon_internal.cpp",
    # "../url/url_parse_file.cc",
    # "../url/third_party/mozilla/url_parse.h",
    # "../url/third_party/mozilla/url_parse.cc",
  ]
  
   sources += [
    "../services/network/network_service.h",
    "../services/network/network_service.cpp",
    "../services/network/network_context.h",
    "../services/network/network_context.cpp",
    "../services/network/prefetch_matching_url_loader_factory.h",
    "../services/network/prefetch_matching_url_loader_factory.cpp",

    "../services/network/cors/cors_url_loader.h",
    "../services/network/cors/cors_url_loader.cpp",
    "../services/network/cors/cors_url_loader_factory.h",
    "../services/network/cors/cors_url_loader_factory.cpp",
    "../services/network/url_loader.h",
    "../services/network/url_loader.cpp",
    "../services/network/url_loader_factory.h",
    "../services/network/url_loader_factory.cpp",
    "../services/network/public/cpp/simple_url_loader.h",
    "../services/network/public/cpp/simple_url_loader.cpp",
  ]

  include_dirs = [
        "//browser/",
        "$target_gen_dir/",
  ]

  # 单元测试
  if (is_debug) { 
    defines += ["NET_UNITTEST"]
    sources += [
      "test/test_entry.cpp",
    ]
  }
}

if (is_debug) {
executable("net_unittest") {
  output_dir = "$root_out_dir/bin"
  deps = [
    ":net"
  ]

  cflags = []
  if (is_debug || (is_mac||is_linux)) {
    cflags = ["-g"]
  }
  include_dirs = [
    "//browser/",
  ]
  sources = [
    "test/test_main.cpp"
  ]
}
group("net_test") {
  deps = [
    ":net_unittest"
  ]
}

}