config("compiler_defaults") {
  defines = []
  cflags = []

  if (is_win) { # TODO: msvc
    cflags += ["/std:c++20"]
  } else {
    cflags = ["-std=c++20"]
  }

  if (is_win) {
    defines += ["OS_WIN", "_HAS_STD_BYTE=0"]
  }
  else if (is_linux) {
    defines += ["OS_LINUX"]
    cflags += [
      "-fPIC",
      "-pthread",
    ]
  } else if (is_mac) {
    defines += ["OS_MAC"]
  }
  if (is_x64) {
    defines += ["CPU_X64"]
  }
  if (is_debug) {
    defines += ["_DEBUG", "DEBUG"]
  }

  if (is_linux || is_mac) {
    # 默认函数不导出，通过添加xxAPI前缀导出。
    cflags += [
      "-fvisibility=hidden"
    ]
  }

  if (is_debug && (is_mac || is_linux)) {
      cflags += ["-g"]
  }
}

config("executable_ldconfig") {
  if (!is_mac) {
    ldflags = [
      "-Wl,-rpath=\$ORIGIN/",
      "-Wl,-rpath-link=",
    ]
  }
}
