

executable("hello") {
    output_dir = "$root_out_dir/bin"
    output_name = "sample_hello"

    deps = [
        "//ui/sdk:sdk"
    ]
    include_dirs = [
        "//ui",
    ]
    sources = [
        "main.cc",
        # "macos.mm"
    ]

    cflags = []
    if (is_debug) {
      cflags += ["-g"]
    }
}