import("//ui/sdk/util.gni")

executable("hello") {
    output_dir = "$root_out_dir/bin"
    output_name = "sample_hello"

    deps = [
        "//ui/sdk:sdk"
    ]
    include_dirs = [
        "//",
        "//ui",
    ]
    sources = [
      "main.cc",
    ]

    cflags = []
    if (is_debug) {
      cflags += ["-g"]
    }
}

if (is_mac) {
  executable("hello_mac") {
      output_dir = "$root_out_dir/bin"
      output_name = "sample_hello_mac"

      sources = [
          "macos.mm"
      ]

      cflags = []
      if (is_debug) {
        cflags += ["-g"]
      }

      ldflags = [
        "-framework", "CoreFoundation",
        "-framework", "CoreGraphics",
        "-framework", "CoreText",
        "-framework", "CoreServices",
        "-framework", "Cocoa",
        "-framework", "QuartzCore",  # Core Animation
      ]
  }
}