import("//ui/sdk/util.gni")

executable("hello") {
    output_dir = "$root_out_dir/bin"
    output_name = "sample_hello"

    deps = [
        "//ui/sdk:sdk"
    ]
    include_dirs = [
        "//",
        "//ui",
    ]
    sources = [
      "main.cc",
    ]

    cflags = []
    if (is_debug) {
      cflags += ["-g"]
    }
}

if (is_mac) {
  executable("hello_mac_1") {
      output_dir = "$root_out_dir/bin"
      output_name = "sample_hello_mac_1"
      sources = [ "macos_1.mm" ]

      cflags = []
      if (is_debug) {
        cflags += ["-g"]
      }
      ldflags = [
        "-framework", "Cocoa",
      ]
  }

  executable("hello_mac_2") {
      output_dir = "$root_out_dir/bin"
      output_name = "sample_hello_mac_2"
      sources = [ "macos_2.mm" ]

      cflags = []
      if (is_debug) {
        cflags += ["-g"]
      }
      ldflags = [
        "-framework", "Cocoa",
      ]
  }

  executable("hello_mac_3_metal") {
      output_dir = "$root_out_dir/bin"
      output_name = "sample_hello_mac_3_metal"
      sources = [
          "macos_3_metal.mm"
      ]

      cflags = []
      if (is_debug) {
        cflags += ["-g"]
      }
      ldflags = [
        "-framework", "Cocoa",
        "-framework", "Metal",
        "-framework", "MetalKit",
      ]
  }
}