import("//ui/sdk/util.gni")

executable("clock") {
  output_dir = "$root_out_dir/bin"
    output_name = "sample_clock"

    deps = [
      "//ui/sdk:sdk",
      "//ui/svg:svg"
    ]
    include_dirs = [
      "//",
      "//ui",
    ]
    sources = [
        "main.cc",
    ]

    cflags = []
    if (is_debug) {
      cflags += ["-g", "-O0"]
    }
    
    ldflags = []
    if (is_mac) {
      ldflags += [
        "-sectcreate", "__TEXT", "__info_plist",
        rebase_path("resource/Info.plist", root_build_dir)
      ]
    }
}

build_bundle("clock_bundle") {
  directory = "resource"
  output = "$root_build_dir/bin/bundle/clock.zip"
}