
import("//ui/sdk/util.gni")

executable("control") {
    output_dir = "$root_out_dir/bin"
    output_name = "sample_control"

    deps = [
      "//ui/sdk:sdk"
    ]
    include_dirs = [
      "//",
      "//ui",
    ]
    sources = [
      "main.cc",
    ]

    cflags = []
    if (is_debug) {
      cflags += ["-g"]
    }

    ldflags = []
    if (is_mac) {
      # 集成配置文件。验证方法：
      # otool -s __TEXT __info_plist <YourApp> | xxd -r
      ldflags += [
        "-sectcreate", "__TEXT", "__info_plist",
        rebase_path("Info.plist", root_build_dir)
      ]
    }
}

build_bundle("control_bundle") {
  directory = "resource"
  output = "$root_build_dir/bin/bundle/control.zip"
}