

executable("svg") {
    output_name = "sample_svg"

    deps = [
        "//ui/sdk:sdk",
        "//ui/svg:svg"
    ]
    include_dirs = [
        "//ui",
    ]
    sources = [
        "main.cc",
    ]

    cflags = []
    if (is_debug) {
      cflags += ["-g"]
    }
}
copy("copy_svg_files") {
  sources = [
    "test/hello_svg.svg", 
    "test/viewbox_1.svg", 
    "test/viewbox_2.svg",
    "test/viewbox_3.svg", 
    "test/shapes.svg",   
    "test/icon_font.svg",
    "test/tiger.svg",
    "test/group.svg",
    "test/use.svg",
    "test/transform_1.svg",
  ]
  outputs = [
    "$root_build_dir/sample/svg/{{source_file_part}}"
  ]
}