declare_args() {
  win_sdk = "C:/Program Files (x86)/Windows Kits/10"
  win_sdk_version = "10.0.22621.0"
  directx_sdk = "C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)"

  enable_d3d10 = false
  enable_d3d11 = false
  enable_d3d12 = false
  enable_metal2 = false
  enable_vulkan = true
}

shared_library("uigpu") {
  output_dir = "$root_out_dir/bin" 
  cflags = []
  sources = []
  defines = ["UI_EXPORTS"]
  lib_dirs = ["$root_build_dir/bin"]
  ldflags = []
  deps = []
  
  include_dirs = [
    "//",
    "//ui/",
    "//ui/gpu/",
    "//ui/sdk/",
    "//ui/3rd/skia/src/",
    "//ui/3rd/skia/src/include/core/"
  ]

  if (is_win) {
    enable_d3d10 = true
    enable_d3d11 = true
    enable_d3d12 = true
    enable_vulkan = true
  }
  else if (is_mac) {
    enable_metal2 = true
    enable_vulkan = true
  }

  if (enable_d3d10) {
    deps += ["src/d3d10"]
  }
  if (enable_d3d11) {
    deps += ["src/d3d11"]
  }
  if (enable_d3d12) {
    deps += ["src/d3d12"]
  }
  if (enable_metal2) {
    deps += [ 
      "src/metal2",
      "src/metal2:compile_metal2_shaders" 
    ]
  }
  if (enable_vulkan) {
    deps += [
      "src/vulkan",
      "src/vulkan:compile_vulkan_shaders"
    ]
  }

  if (is_debug && (is_mac || is_linux)) {
    cflags += ["-g"]
  }
  sources += [
    "src/util.cpp",
    "src/util.h",
    "src/gpu_layer.cpp",
    "src/texture_tile.cpp",
    "src/texture_tile_array.cpp",
    "src/gpu.cpp",
  ]
  if (is_mac) {
    sources += [
      "src/gpu1.mm",
    ]
    ldflags += [
      "-framework", "Foundation",
      "-framework", "CoreGraphics",
      "-framework", "Metal",
      "-framework", "MetalKit",
      "-framework", "AppKit",
    ]
  }
}

group("gpu") {
  deps = [
    ":uigpu"
  ]
}

#######################################
if (is_debug) {
copy("copy_resource") {
  sources = [
   "sample/bg.png"
  ]
  outputs = [
    "$root_build_dir/bin/bundle/uigpu/{{source_file_part}}"
  ]
}

if (is_win) {
  executable("uigpu_sample") {
    output_dir = "$root_out_dir/bin"
    output_name = "sample_uigpu"

    deps = [
      "//ui/gpu:uigpu",
      ":copy_resource",
    ]

    cflags = []
    if (is_debug || (is_mac||is_linux)) {
      cflags = ["-g"]
    }

    include_dirs = [
      "//ui/",
      "//ui/gpu/",
    ]
    include_dirs += [
      "//ui/3rd/wtl90/include"
    ]
    libs = [
      "atls.lib",
      "gdiplus.lib"
    ]

    sources = [
      # "sample/sample.cpp",
      "sample/sample_thread.cpp",
    ]
  }
}
group("gpu_test") {
  if (is_win) {
    deps = [
      ":uigpu_sample"
    ]
  }
}
}